# camera_zwo_asi

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
camera_zwo_asi/: __init__.py  camera.py  control_range.py  create_library.py  darkframes.py  image.py  image_library.py  image_matrix.py  main.py  picture_matrix.py  roi.py
cmake/: FindUSB.cmake
include/zwo_asi/: bayer_pattern.hpp  camera.hpp  camera_attributes.hpp  camera_exception.hpp  camera_info.hpp  camera_mode.hpp  controllable.hpp  controllable_exception.hpp  guide_direction.hpp  image_type.hpp  roi.hpp  roi_exception.hpp  utils.hpp
src/: bayer_pattern.cpp  camera.cpp  camera_exception.cpp  camera_info.cpp  camera_mode.cpp  controllable.cpp  controllable_exception.cpp  guide_direction.cpp  image_type.cpp  print.cpp  roi.cpp  roi_exception.cpp  utils.cpp
srcpy/: bindings.cpp
tests/: camera_library.py  check_library_progress.py  test.py  test_image_library.py  test_image_matrix.py
