[metadata]
name = camera_zwo_asi
description = Python wrapper over ZWO ASI SDK 
long_description = file: README.md
long_description_content_type = text/markdown
author = Vincent Berenz
author_email = vincent.berenz@tuebingen.mpg.de
license = MIT
platforms = linux
url = https://github.com/MPI-IS/asi-cams

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    ninja		 
    numpy
    nptyping
    toml
    types-toml
    opencv-python
    cmake_build_extension
    h5py
    alive_progress
    
[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[options.entry_points]
console_scripts =
  zwo-asi-print = camera_zwo_asi.main:print_
  zwo-asi-shot = camera_zwo_asi.main:shot
  zwo-asi-dump = camera_zwo_asi.main:dump
  zwo-asi-udev = camera_zwo_asi.main:udev
  